Fixed issue 3. (Vertical Alignment)

--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -4,8 +4,7 @@
   letter-spacing: .30em;
   opacity: 0.8;
   text-align: left;
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
+  
   padding-left: 2rem;
   padding-right: 2rem;
   @include transition();
